monasca-persister: Add default config file
Use oslo-config-generator to generate the persister.conf file . This
was missing in the package.

Change-Id: I7025f81c5110ac67f1b4a3c217dda9a4a62d2d77
(cherry picked from commit c99078e4cf0a77d4fbcf8c0c16cd7a6b43c7fefc)

--- a/openstack/monasca-persister/monasca-persister.spec.j2
+++ b/openstack/monasca-persister/monasca-persister.spec.j2
@@ -62,6 +62,9 @@ Data is read from Kafka queue and saved either in InfluxDB or Cassandra
 
 %build
 %{py2_build}
+PYTHONPATH=. oslo-config-generator \
+  --config-file config-generator/persister.conf \
+  --output-file etc/monasca/persister.conf.sample
 
 %install
 %{py2_install}
@@ -73,6 +76,7 @@ install -d -m 755 %{buildroot}%{_var}/log/{{ pypi_name }}
 
 # install config
 install -D -m 640 etc/monasca/persister-logging.conf %{buildroot}%{_sysconfdir}/monasca/persister-logging.conf
+install -D -m 644 etc/monasca/persister.conf.sample %{buildroot}%{_sysconfdir}/monasca/persister.conf
 
 # install systemd service
 install -p -D -m 444 %{SOURCE1} %{buildroot}%{_unitdir}/openstack-monasca-persister.service
@@ -109,6 +113,7 @@ fi
 %dir %attr(-, root, monasca) %{_sysconfdir}/monasca
 %dir %attr(0750, monasca-persister, monasca) %{_var}/lib/{{ pypi_name }}
 %dir %attr(0750, monasca-persister, monasca) %{_var}/log/{{ pypi_name }}
+%config(noreplace) %attr(0640, root, monasca) %{_sysconfdir}/monasca/persister.conf
 %config(noreplace) %attr(0640, root, monasca) %{_sysconfdir}/monasca/persister-logging.conf
 %config(noreplace) %{_sysconfdir}/logrotate.d/openstack-monasca-persister.logrotate
 %{_unitdir}/openstack-monasca-persister.service
