--- a/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
+++ b/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'monasca-tempest-plugin' %}
-{% set source=fetch_source('https://tarballs.openstack.org/monasca-tempest-plugin/monasca-tempest-plugin-0.1.0.tar.gz') %}
-{% set upstream_version = upstream_version('0.1.0') %}
+{% set source=fetch_source('https://tarballs.openstack.org/monasca-tempest-plugin/monasca-tempest-plugin-0.2.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.2.0') %}
 {% set rpm_release = '1' %}
 
 %global sname monasca_tempest_plugin
@@ -16,6 +16,8 @@ License:       {{ license('Apache-2.0') }}
 Group:         Development/Languages/Python
 URL:           https://git.openstack.org/cgit/openstack/{{ pypi_name }}
 Source0:       {{ source|basename }}
+# https://git.openstack.org/cgit/openstack/monasca-tempest-plugin/commit/?id=aadc24ea03f9f73c9bb2e943eb734893be5c9290
+Patch1:        0001-Mark-some-basic-tests-as-smoke-tests.patch
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('devel') }}
 BuildRequires: {{ py2pkg('pbr') }}
@@ -44,7 +46,7 @@ It contains the documentation for the monasca tempest tests.
 %endif
 
 %prep
-%autosetup -n {{ pypi_name }}-{{ upstream_version }}
+%autosetup -p1 -n {{ pypi_name }}-{{ upstream_version }}
 
 # Let's handle dependencies ourseleves
 %py_req_cleanup
