Include the Fedora macros when RHEL/CentOS is > 7
Some of the Fedora macros are relevant to RHEL 8, such as those
related to Python 3. We should include them in the package for those
cases.

Change-Id: Id41911119d47def7276311e8e1dcf8fc1ec8004f

--- a/openstack/openstack-macros/openstack-macros.spec.j2
+++ b/openstack/openstack-macros/openstack-macros.spec.j2
@@ -2,7 +2,7 @@
 %global rdo 1
 %endif
 Name:           openstack-macros
-Version:        2018.2.5
+Version:        2018.2.6
 Release:        0
 Summary:        OpenStack Packaging - RPM Macros
 License:        {{ license('Apache-2.0') }}
@@ -52,7 +52,7 @@ install -D -m644 %{SOURCE4} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-fedo
 %if 0%{?rdo}
 %{_sysconfdir}/rpm/macros.openstack-rdo
 %endif
-%if 0%{?fedora}
+%if 0%{?fedora} || 0%{?rhel} > 7
 %{_sysconfdir}/rpm/macros.openstack-fedora
 %endif
 
