monasca-tempest-plugin: Add missing Requires for monasca-common
There is a test case that imports monasca_common

Change-Id: I2ec61ba5a3733de1ad84eefcbf83400ce3a99e04

--- a/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
+++ b/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
@@ -22,6 +22,7 @@ BuildRequires: {{ py2pkg('pbr') }}
 BuildRequires: {{ py2pkg('setuptools') }}
 Requires:      {{ py2pkg('Tempest') }}
 Requires:      {{ py2pkg('mock') }}
+Requires:      {{ py2pkg('monasca-common') }}
 Requires:      {{ py2pkg('oslo.config') }}
 Requires:      {{ py2pkg('oslo.serialization') }}
 Requires:      {{ py2pkg('oslo.utils') }}
