--- a/openstack/vmware-nsx/vmware-nsx.spec.j2
+++ b/openstack/vmware-nsx/vmware-nsx.spec.j2
@@ -30,6 +30,7 @@ Requires:       {{ py2pkg('SQLAlchemy') }}
 Requires:       {{ py2pkg('decorator') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('httplib2') }}
+Requires:       {{ py2pkg('mock') }}
 Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('python-openstackclient') }}
 Requires:       {{ py2pkg('osc-lib') }}
