--- a/openstack/vmware-nsx/vmware-nsx.spec.j2
+++ b/openstack/vmware-nsx/vmware-nsx.spec.j2
@@ -31,6 +31,7 @@ Requires:       {{ py2pkg('decorator') }}
 Requires:       {{ py2pkg('enum34') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('httplib2') }}
+Requires:       {{ py2pkg('mock') }}
 Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('neutron-lib') }}
 Requires:       {{ py2pkg('python-openstackclient') }}
