--- a/openstack/python-manilaclient/python-manilaclient.spec.j2
+++ b/openstack/python-manilaclient/python-manilaclient.spec.j2
@@ -51,6 +51,7 @@ Summary:        Documentation for OpenStack Share API Client
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-programoutput') }}
 
 %description -n python-manilaclient-doc
 Client library and command line utility for interacting with Openstack
