monasca-notification: Fix %attr for /etc/monasca
This must be in sync with other packages that also own
/etc/monasca (like monasca-transformer)

Change-Id: I81244e2cc0f996989ab22d860c2fef2a75d8f01c

--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -147,7 +147,7 @@ fi
 %doc README.rst
 %{_bindir}/monasca-notification
 %{_unitdir}/%{name}.service
-%dir %{notification_conf_dir}
+%dir %attr(-, root, %{groupname}) %{notification_conf_dir}
 %config(noreplace) %attr(640, root, %{groupname}) %{notification_conf_dir}/notification.conf
 %config(noreplace) %{_sysconfdir}/logrotate.d/openstack-monasca-notification.logrotate
 %dir %attr(750, %{username}, %{groupname}) %notification_log_dir
