horizon: add patch to turn off compression for tests
the user running the test does not have read access to the static files
and raises permission errors

https://review.openstack.org/#/c/627741 enabled template.debug
as a result permission denied which were ignored earlier, are now
caught and raised.

this patch is needed to unblock the CI, untill the upstream review is
merged or there is a resolution for this problem

upstream review: https://review.openstack.org/#/c/635159/

Change-Id: Icfb8c1ab237217bb354874691f0ef9ba37bfb681

--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -18,6 +18,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://wiki.openstack.org/OpenStackDashboard
 Source0:        {{ source|basename }}
+# https://review.openstack.org/#/c/635159/
+Patch0:         0001-Do-not-set-COMPRESS_ENABLED-explicitly.patch
 BuildRequires:  fdupes
 BuildRequires:  gettext
 BuildRequires:  openstack-macros
