Set BuildArch for watcher-doc.
Change-Id: I6f5bb1ff56219df46116a47b00064f718085d256
(cherry picked from commit 2020ad08decc5256be364747adb7166068fb5b14)

--- a/openstack/watcher/watcher.spec.j2
+++ b/openstack/watcher/watcher.spec.j2
@@ -144,6 +144,7 @@ BuildRequires:  {{ py2pkg('os-api-ref') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-pecanwsme ') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-seqdiag ') }}
+BuildArch:      noarch
 
 %description -n {{ py2name() }}-doc
 OpenStack Watcher documentation.
