--- a/openstack/magnum-tempest-plugin/magnum-tempest-plugin.spec.j2
+++ b/openstack/magnum-tempest-plugin/magnum-tempest-plugin.spec.j2
@@ -15,6 +15,8 @@ License:       {{ license('Apache-2.0') }}
 Group:         Development/Languages/Python
 URL:           https://git.openstack.org/cgit/openstack/{{ pypi_name }}
 Source0:       {{ source|basename }}
+# https://review.openstack.org/#/c/638619/
+Patch1:        0001-Fix-skipping-of-tests.patch
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('devel') }}
 BuildRequires: {{ py2pkg('pbr') }}
