nova: Add missing Requires/BuildRequires
os-resource-classes is needed now.

Change-Id: Ia07b1a4f8bfb57ce67f613b926f0b380b2831d55

--- a/openstack/nova/nova.spec.j2
+++ b/openstack/nova/nova.spec.j2
@@ -54,6 +54,7 @@ BuildRequires:  {{ py2pkg('python-neutronclient') }}
 BuildRequires:  {{ py2pkg('python-novaclient') }}
 BuildRequires:  {{ py2pkg('os-api-ref') }}
 BuildRequires:  {{ py2pkg('os-brick') }}
+BuildRequires:  {{ py2pkg('os-resource-classes') }}
 BuildRequires:  {{ py2pkg('os-service-types') }}
 BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('os-vif') }}
@@ -146,6 +147,7 @@ Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('netifaces') }}
 Requires:       {{ py2pkg('python-neutronclient') }}
 Requires:       {{ py2pkg('os-brick') }}
+Requires:       {{ py2pkg('os-resource-classes') }}
 Requires:       {{ py2pkg('os-service-types') }}
 Requires:       {{ py2pkg('os-vif') }}
 Requires:       {{ py2pkg('os-win') }}
