Fix heat-dashboard build
heat-dashboard added integration tests to its test suite[1]. The
integration tests rely on firefox, so we need to skip them.
Unfortunately even though the tests themselves are tagged in a way that
allows us to skip them, the modules are still imported, so we need
remove the files entirely.

[1] https://review.openstack.org/634796

Change-Id: Iecfd316aaa19e02787fc66f10bec5c0c52f6a352

--- a/openstack/heat-dashboard/heat-dashboard.spec.j2
+++ b/openstack/heat-dashboard/heat-dashboard.spec.j2
@@ -66,7 +66,8 @@ It is used to verify the functionality of the Heat UI Plugin.
 %py2_build
 
 %check
-PYTHONPATH=%{http_dashboard_dir} python manage.py test heat_dashboard --settings=heat_dashboard.test.settings
+rm -r heat_dashboard/test/integration
+PYTHONPATH=%{http_dashboard_dir} python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings --exclude-tag=integration
 
 %install
 %py2_install
