--- a/openstack/reno/reno.spec.j2
+++ b/openstack/reno/reno.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'reno' %}
-{% set upstream_version = upstream_version('2.10.0') %}
+{% set upstream_version = upstream_version('2.11.2') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -27,6 +27,7 @@ Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('Sphinx') }}
 Requires:       {{ py2pkg('docutils') }}
 Requires:       {{ py2pkg('dulwich') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 %if 0%{?suse_version}
 BuildRequires:  git-core
