--- a/openstack/mistral/mistral.spec.j2
+++ b/openstack/mistral/mistral.spec.j2
@@ -12,7 +12,7 @@ Summary:        Workflow Service for OpenStack cloud
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Libraries
 URL:            https://launchpad.net/mistral
-Source0:        {{ source|basename }}
+Source0:        {{ source }}
 Source1:        mistral-api.service
 Source2:        mistral-engine.service
 Source3:        mistral-executor.service
@@ -72,6 +72,7 @@ BuildRequires:  {{ py2pkg('tooz') }}
 BuildRequires:  {{ py2pkg('python-troveclient') }}
 BuildRequires:  {{ py2pkg('unittest2') }}
 BuildRequires:  {{ py2pkg('python-vitrageclient') }}
+BuildRequires:  {{ py2pkg('zake') }}
 BuildRequires:  {{ py2pkg('python-zaqarclient') }}
 BuildRequires:  {{ py2pkg('python-zunclient') }}
 Requires:       python-mistral = %{version}-%{release}
