--- a/openstack/tooz/tooz.spec.j2
+++ b/openstack/tooz/tooz.spec.j2
@@ -10,6 +10,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://docs.openstack.org/developer/tooz/
 Source0:        https://files.pythonhosted.org/packages/source/t/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
+# https://review.openstack.org/#/c/640695/
+Patch1:         0001-Remove-grpcio-from-requirements.txt.patch
 BuildRequires:  memcached
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
