--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-keystoneclient' %}
-{% set upstream_version = upstream_version('3.17.0') %}
+{% set upstream_version = upstream_version('3.19.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -27,7 +27,7 @@ BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testresources', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('debtcollector') }}
@@ -78,9 +78,7 @@ rm -fr %{buildroot}%{python2_sitelib}/tests
 rm -fr html/.doctrees html/.buildinfo
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %doc README.rst
