ceilometermiddleware: Update to 1.4.0
Change-Id: I1dbd7c5c5be805dc0288362b7f5c3ec1bd6a6a9d

--- a/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
+++ b/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'ceilometermiddleware' %}
-{% set upstream_version = upstream_version('1.3.0') %}
+{% set upstream_version = upstream_version('1.4.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -23,8 +23,8 @@ BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('pycadf') }}
-BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
@@ -65,7 +65,7 @@ This package contains documentation in HTML format.
 rm -rf html/.{doctrees,buildinfo}
 
 %check
-%{__python2} setup.py testr
+%{__python2} -m stestr.cli run
 
 %install
 %py2_install
