--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.service' %}
-{% set upstream_version = upstream_version('1.34.0') %}
+{% set upstream_version = upstream_version('1.38.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 %if 0%{?rhel} || 0%{?fedora}
@@ -34,10 +34,12 @@ BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('yappi', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('Paste') }}
 Requires:       {{ py2pkg('PasteDeploy') }}
 Requires:       {{ py2pkg('Routes') }}
 Requires:       {{ py2pkg('WebOb') }}
+Requires:       {{ py2pkg('debtcollector') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('fixtures') }}
 Requires:       {{ py2pkg('greenlet') }}
@@ -47,6 +49,7 @@ Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.log') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('six') }}
+Requires:       {{ py2pkg('yappi') }}
 BuildArch:      noarch
 %python_subpackages
 
