os-apply-config: Install the templates dir
This is needed for heat-agents which installs files into the
templates/ directory.

Change-Id: Ic986b0e6d09b4a2512ce65da1f044634f7f32de9
(cherry picked from commit d5afb096e072d9461652d809489024d9891e3adf)

--- a/openstack/os-apply-config/os-apply-config.spec.j2
+++ b/openstack/os-apply-config/os-apply-config.spec.j2
@@ -58,6 +58,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
 %{py2_install}
+install -d -m 755 %{buildroot}%{_libexecdir}/os-apply-config/templates
 
 %if %{with test}
 %check
@@ -71,6 +72,8 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{_bindir}/os-config-applier
 %{python2_sitelib}/os_apply_config
 %{python2_sitelib}/*.egg-info
+%dir %{_libexecdir}/os-apply-config
+%dir %{_libexecdir}/os-apply-config/templates
 
 %if %{with docs}
 %files doc
