os-refresh-config: Fix dirs
When py2name translates to python-os-refresh-config, the
pre-configure.d/, configure.d/, migration.d/ and post-configure.d/
directories are installed into the wrong place. Fix this by not using
%{name} which would be wrong in the given example.

Change-Id: I76be2f90709adeda19e1f8d6882737644de9251f
(cherry picked from commit 9373efe3a195bd4bdbb1d58cb2f083b89db140a5)

--- a/openstack/os-refresh-config/os-refresh-config.spec.j2
+++ b/openstack/os-refresh-config/os-refresh-config.spec.j2
@@ -36,10 +36,10 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %install
 %py2_install
-install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/pre-configure.d
-install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/configure.d
-install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/migration.d
-install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/post-configure.d
+install -d -m 755 %{buildroot}%{_libexecdir}/os-refresh-config/pre-configure.d
+install -d -m 755 %{buildroot}%{_libexecdir}/os-refresh-config/configure.d
+install -d -m 755 %{buildroot}%{_libexecdir}/os-refresh-config/migration.d
+install -d -m 755 %{buildroot}%{_libexecdir}/os-refresh-config/post-configure.d
 
 %check
 %{__python2} -m stestr.cli run
@@ -50,6 +50,6 @@ install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/post-configure.d
 %{_bindir}/os-refresh-config
 %{python2_sitelib}/os_refresh_config
 %{python2_sitelib}/*.egg-info
-%{_libexecdir}/%{name}
+%{_libexecdir}/os-refresh-config
 
 %changelog
