os-api-ref: Drop oslosphinx BuildRequires and fix build
- oslosphinx is not needed
- Add a patch which handles different beautifulsoup4 render results
- for different versions. The patch is already merged upstream.

Change-Id: I9520ace1096810045a1475396b4a8378c5679dd8

--- a/openstack/os-api-ref/os-api-ref.spec.j2
+++ b/openstack/os-api-ref/os-api-ref.spec.j2
@@ -11,12 +11,13 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/%{sname}
 Source0:        {{ source }}
+# https://review.openstack.org/#/c/630146/
+Patch1:         0001-Fix-microversion-test-handle-different-HTML-renderin.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('beautifulsoup4', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('openstackdocstheme', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('oslosphinx', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-subunit', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('sphinx-testing', py_versions=['py2', 'py3']) }}
