--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.context' %}
-{% set upstream_version = upstream_version('2.22.0') %}
+{% set upstream_version = upstream_version('2.22.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -14,12 +14,13 @@ URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('debtcollector') }}
 BuildArch:      noarch
 %if %{with test}
 BuildRequires:  {{ py2pkg('debtcollector', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 %endif
 %python_subpackages
 
