--- a/openstack/oslo.privsep/oslo.privsep.spec.j2
+++ b/openstack/oslo.privsep/oslo.privsep.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.privsep' %}
-{% set upstream_version = upstream_version('1.30.1') %}
+{% set upstream_version = upstream_version('1.32.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -39,7 +39,9 @@ Requires:       {{ py2pkg('oslo.utils') }}
 BuildArch:      noarch
 %ifpython2
 BuildRequires:  {{ py2pkg('enum34') }}
+BuildRequires:  {{ py2pkg('futures') }}
 Requires:       {{ py2pkg('enum34') }}
+Requires:       {{ py2pkg('futures') }}
 %endif
 %if 0%{?suse_version}
 Requires(post): update-alternatives
