--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -1,11 +1,16 @@
-Name:           {{ py2name('oslotest') }}
-Version:        3.7.0
-Release:        0
+{% set pypi_name = 'oslotest' %}
+{% set upstream_version = upstream_version('3.7.1') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack test framework
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/oslotest
-Source0:        https://files.pythonhosted.org/packages/source/o/oslotest/oslotest-%{version}.tar.gz
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('debtcollector', py_versions=['py2', 'py3']) }}
